Fix for white border on mobile + simplyfied bg css

--- a/styles/background.css
+++ b/styles/background.css
@@ -1,7 +1,8 @@
 
-.bg {
-    animation:slide 20s ease-in-out infinite alternate;
-    background-image: linear-gradient(-60deg, rgb(106, 40, 130) 50%, rgb(50, 0, 50) 50%);
+
+.bg, .bg2, .bg3 {
+    will-change: transform;
+    background-attachment: fixed;
     bottom:0;
     left:-50%;
     opacity:.5;
@@ -10,8 +11,10 @@
     top:0;
     z-index:-1;
 }
+
 .bg {
-    background-attachment: fixed;
+    animation:slide 20s ease-in-out infinite alternate;
+    background-image: linear-gradient(-60deg, rgb(106, 40, 130) 50%, rgb(50, 0, 50) 50%);
 }
 .bg2 {
     animation-direction:alternate-reverse;
@@ -20,26 +23,6 @@
 
 .bg3 {
     animation-duration:25s;
-}
-.bg, .bg2, .bg3 {
-    will-change: transform;
-}
-
-.content {
-    background-color:rgba(255,255,255,.8);
-    border-radius:.25em;
-    box-shadow:0 0 .25em rgba(0,0,0,.25);
-    box-sizing:border-box;
-    left:50%;
-    padding:10vmin;
-    position:fixed;
-    text-align:center;
-    top:50%;
-    transform:translate(-50%, -50%);
-}
-
-h1 {
-    font-family:monospace;
 }
 
 @keyframes slide {
